--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/alunos/Downloads/MVC-Simples-JDBC-V1 (1)/MVC-Simples-JDBC-V1/bin/lib/mysql-connector-java.jar">
+	<classpathentry kind="lib" path="C:/Users/alunos/Downloads/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
